tests/rosetta/out/Java/averages-mode.error
javac: exit status 1
/tmp/AveragesMode.java:12: error: incompatible types: Integer cannot be converted to List<Integer>
            List<Integer> v = arr1.get(i);
                                      ^
/tmp/AveragesMode.java:14: error: incompatible types: List<Integer> cannot be converted to Integer
                counts1.put(v, ((Number)counts1.get(v)).doubleValue() + 1);
                            ^
/tmp/AveragesMode.java:17: error: incompatible types: List<Integer> cannot be converted to Integer
                counts1.put(v, 1);
                            ^
/tmp/AveragesMode.java:18: error: incompatible types: List<Integer> cannot be converted to Integer
                keys1.add(v);
                          ^
/tmp/AveragesMode.java:25: error: incompatible types: Integer cannot be converted to List<Integer>
            List<Integer> k = keys1.get(i);
                                       ^
/tmp/AveragesMode.java:26: error: incompatible types: Integer cannot be converted to Map<Integer,Integer>
            Map<Integer,Integer> c = counts1.get(k);
                                                ^
/tmp/AveragesMode.java:27: error: bad operand types for binary operator '>'
            if (c > max1) {
                  ^
  first type:  Map<Integer,Integer>
  second type: int
/tmp/AveragesMode.java:28: error: incompatible types: Map<Integer,Integer> cannot be converted to int
                max1 = (int)(c);
                            ^
/tmp/AveragesMode.java:35: error: incompatible types: Integer cannot be converted to List<Integer>
            List<Integer> k = keys1.get(i);
                                       ^
/tmp/AveragesMode.java:37: error: incompatible types: List<Integer> cannot be converted to Integer
                modes1.add(k);
                           ^
/tmp/AveragesMode.java:47: error: incompatible types: Integer cannot be converted to List<Integer>
            List<Integer> v = arr2.get(i);
                                      ^
/tmp/AveragesMode.java:49: error: incompatible types: List<Integer> cannot be converted to Integer
                counts2.put(v, ((Number)counts2.get(v)).doubleValue() + 1);
                            ^
/tmp/AveragesMode.java:52: error: incompatible types: List<Integer> cannot be converted to Integer
                counts2.put(v, 1);
                            ^
/tmp/AveragesMode.java:53: error: incompatible types: List<Integer> cannot be converted to Integer
                keys2.add(v);
                          ^
/tmp/AveragesMode.java:60: error: incompatible types: Integer cannot be converted to List<Integer>
            List<Integer> k = keys2.get(i);
                                       ^
/tmp/AveragesMode.java:61: error: incompatible types: Integer cannot be converted to Map<Integer,Integer>
            Map<Integer,Integer> c = counts2.get(k);
                                                ^
/tmp/AveragesMode.java:62: error: bad operand types for binary operator '>'
            if (c > max2) {
                  ^
  first type:  Map<Integer,Integer>
  second type: int
/tmp/AveragesMode.java:63: error: incompatible types: Map<Integer,Integer> cannot be converted to int
                max2 = (int)(c);
                            ^
/tmp/AveragesMode.java:70: error: incompatible types: Integer cannot be converted to List<Integer>
            List<Integer> k = keys2.get(i);
                                       ^
/tmp/AveragesMode.java:72: error: incompatible types: List<Integer> cannot be converted to Integer
                modes2.add(k);
                           ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
20 errors
